--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "upload zip - unzip html css - conver to pdf",
   "main": "index.js",
+  "type": "module",
+  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,6 +21,8 @@
     "log4js": "^6.3.0",
     "multer": "^1.4.2",
     "puppeteer": "^9.1.1",
+    "swagger-jsdoc": "^7.0.0-rc.6",
+    "swagger-ui-express": "^4.1.6",
     "unzipper": "^0.10.11",
     "uuid": "^8.3.2",
     "wkhtmltopdf": "^0.4.0",
